# Dynamo

./: .gitignore  .gitmodules  ALL_BUILD.vcxproj  CMakeCache.txt  CMakeLists.txt  Dynamo.sln  INSTALL.vcxproj  INSTALL.vcxproj.filters  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
.github/workflows/: cmake.yml
Dynamo/: CMakeLists.txt  Dynamo.vcxproj  Dynamo.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  NodeEditor.json  cmake_install.cmake  imgui.ini
Dynamo/res/: dynamo.rc
Dynamo/res/models/backpack/: license.txt  scene.gltf
Dynamo/res/models/chica/: license.txt  scene.gltf
Dynamo/res/models/freddy/: license.txt  scene.gltf
Dynamo/res/models/golden_freddy/: license.txt  output.gltf  scene.gltf
Dynamo/res/models/mangle/: license.txt  scene.gltf
Dynamo/res/models/marionette/: license.txt  scene.gltf
Dynamo/res/models/piglet/: license.txt  scene.gltf
Dynamo/res/models/springtrap/: license.txt  scene.gltf
Dynamo/res/shaders/: AnimModelps.cso  AnimModelps.hlsl  AnimModelvs.cso  AnimModelvs.hlsl  AnimSolidvs.hlsl  DepthMapps.cso  DepthMapps.hlsl  DepthMapvs.cso  DepthMapvs.hlsl  DepthModelvs.hlsl  Flatps.cso  Flatps.hlsl  Flatvs.cso  Flatvs.hlsl  Modelps.cso  Modelps.hlsl  Modelvs.cso  Modelvs.hlsl  Negativeps.cso  Negativeps.hlsl  Negativevs.cso  PointLightps.cso  PointLightps.hlsl  PointLightvs.cso  PointLightvs.hlsl  Posps.cso  Posps.hlsl  Posvs.cso  Posvs.hlsl  ShadowMapvs.cso  ShadowMapvs.hlsl  Shadowvs.hlsl  Skyboxps.cso  Skyboxps.hlsl  Skyboxvs.cso  Skyboxvs.hlsl  Solidps.cso  Solidps.hlsl  Solidvs.cso  Solidvs.hlsl
Dynamo/src/: dynamopch.h
Dynamo/src/Core/: App.cpp  App.h  Input.cpp  Input.h  Main.cpp  Window.cpp  Window.h
Dynamo/src/Debug/: DynamoException.cpp  DynamoException.h
Dynamo/src/GUI/: GUIable.h  Gui.cpp  Gui.h
Dynamo/src/Graphics/: AnimModel.cpp  AnimModel.h  Animation.cpp  Animation.h  Animator.cpp  Animator.h  AssimpXMHelpers.h  Bindable.h  Binds.h  BlendState.cpp  BlendState.h  Bone.cpp  Bone.h  Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  ConstantBuffer.cpp  ConstantBuffer.h  DSState.cpp  DSState.h  DSView.cpp  DSView.h  Entity.h  Framebuffer.cpp  Framebuffer.h  GPU.cpp  GPU.h  Graphics.cpp  Graphics.h  GraphicsCore.h  Gui.cpp  Gui.h  IndexBuffer.cpp  IndexBuffer.h  InputLayout.cpp  InputLayout.h  Light.cpp  Light.h  Mesh.cpp  (+48 more)
Dynamo/src/Graphics/Animation/: AnimMesh.cpp  AnimMesh.h  AnimModel.cpp  AnimModel.h  Animation.cpp  Animation.h  Animator.cpp  Animator.h  BlendState.h  Bone.cpp  Bone.h
Dynamo/src/Graphics/Bindable/: Bindable.h  Binds.cpp  Binds.h  BlendState.cpp  BlendState.h  Buffer.h  ConstantBuffer.cpp  ConstantBuffer.h  DSState.cpp  DSState.h  DepthStencil.cpp  DepthStencil.h  IndexBuffer.cpp  IndexBuffer.h  InputLayout.cpp  InputLayout.h  Rasterizer.cpp  Rasterizer.h  RenderTarget.cpp  RenderTarget.h  Sampler.cpp  Sampler.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Topology.cpp  Topology.h  TransformBuffer.cpp  TransformBuffer.h  VertexBuffer.cpp  VertexBuffer.h  Viewport.h
Dynamo/src/Graphics/Entities/: Camera.cpp  Camera.h  Light.cpp  Light.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  ObjectCBuffs.h  Shapes.h  Skybox.cpp  Skybox.h  TestCube.cpp  TestCube.h  TestPlane.cpp  TestPlane.h
Dynamo/src/Graphics/GUI/: GUIable.h  Gui.cpp  Gui.h
Dynamo/src/Graphics/RDG/: BasicRDG.cpp  BasicRDG.h  BasicRenderPass.cpp  BasicRenderPass.h  BindPass.cpp  BindPass.h  Channel.cpp  Channel.h  ClearPass.cpp  ClearPass.h  Editor.cpp  Editor.h  In.cpp  In.h  Negativepass.h  NoShadowPass.h  Out.cpp  Out.h  OutlineMaskPass.cpp  OutlineMaskPass.h  OutlineRDG.cpp  OutlineRDG.h  OutlineRenderPass.cpp  OutlineRenderPass.h  Pass.cpp  Pass.h  RDG.cpp  RDG.h  RenderPass.cpp  Renderpass.h  ScreenPass.cpp  ScreenPass.h  ShadowPass.cpp  ShadowPass.h  SkyboxPass.cpp  SkyboxPass.h
Dynamo/src/Graphics/Render/: Renderable.cpp  Renderable.h  Scene.cpp  Scene.h  Step.cpp  Step.h  Technique.cpp  Technique.h  Work.cpp  Work.h
